remove shading and highlights from website icons to ensure a clean look and readable as small images

--- a/style.css
+++ b/style.css
@@ -438,7 +438,7 @@
     height: 27px;
     background-color: black;
     border-radius: 50%;
-    margin-top: 24px;
+    margin-top: 23px;
     position: relative;
     z-index: 5;
 }
@@ -518,7 +518,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: flex-end;
-    gap: 1px;
+    gap: 1.5px;
 }
 
 .skelett-tooth-top-1 {
@@ -549,7 +549,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: flex-end;
-    gap: 1px;
+    gap: 1.5px;
     position: relative;
 }
 
@@ -601,6 +601,7 @@
     margin-top: -50px;
 }
 
+/* 
 .lampa-bulb-highlight {
     height: 20px;
     width: 10px;
@@ -612,6 +613,7 @@
     position: absolute;
     transform: rotate(40deg);
 }
+    */ 
 
 .lampa-metal-wrapper {
     display: flex;
@@ -631,12 +633,7 @@
     overflow: hidden;
 }
 
-.lampa-metal-1-highlight {
-    width: 5px;
-    height: 10px;
-    background-color: #E8E8E8;
-    margin-left: 5px;
-}
+
 
 .lampa-metal-2 {
     background-color: #C0C0C0;
@@ -646,18 +643,26 @@
     margin-bottom: -2px;
 }
 
-.lampa-metal-2-highlight {
+.lampa-metal-3 {
+    background-color: #C0C0C0;
+    width: 29px;
+    height: 10px;
+    border-radius: 10px;
+}
+
+/* 
+.lampa-metal-1-highlight {
     width: 5px;
     height: 10px;
     background-color: #E8E8E8;
     margin-left: 5px;
 }
 
-.lampa-metal-3 {
-    background-color: #C0C0C0;
-    width: 29px;
+.lampa-metal-2-highlight {
+    width: 5px;
     height: 10px;
-    border-radius: 10px;
+    background-color: #E8E8E8;
+    margin-left: 5px;
 }
 
 .lampa-metal-3-highlight {
@@ -666,6 +671,7 @@
     background-color: #E8E8E8;
     margin-left: 5px;
 }
+*/ 
 
 .lampa-bottom {
     width: 15px;
@@ -678,7 +684,7 @@
 .lampa-wire {
     width: 5px;
     height: 50px;
-    border: 2px solid #B8860B;
+    border: 3px solid #B8860B;
     margin-bottom: 0;
     display: flex;
     flex-direction: row;
@@ -688,22 +694,22 @@
 
 .lampa-wire-loop-left {
     border-radius: 50% 50% 0 50%;
-    border: 2px solid #B8860B;
+    border: 3px solid #B8860B;
     background-color: transparent;
     height: 7px;
     width: 7px;
-    margin-top: -11px;
-    margin-left: -11px;
+    margin-top: -12px;
+    margin-left: -12px;
 }
 
 .lampa-wire-loop-right {
     border-radius: 50% 50% 50% 0;
-    border: 2px solid #B8860B;
+    border: 3px solid #B8860B;
     background-color: transparent;
     height: 7px;
     width: 7px;
-    margin-top: -11px;
-    margin-right: -11px;
+    margin-top: -12px;
+    margin-right: -12px;
 }
 
 /* PAINT BRUSH */ 
@@ -747,11 +753,13 @@
     overflow: hidden;
 }
 
+/* 
 .paintbrush-metal-shine {
     background-color: #E8E8E8;
     width: 4.5px;
     height: 15px;
 }
+*/ 
 
 .paintbrush-paint {
     width: 42px;
